--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
 
 // Start the Elm application.
 var app = Elm.Main.init({
-    node: document.getElementById('myapp')
+    node: document.getElementById('myapp'),
+    flags: location.href
 });
 
 </script>
