Make index page responsive

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Kanji game</title>
+  <style>
+    #container {
+      word-wrap: break-word;
+      font-size: 3.5vmin;
+      margin: 1vmin auto;
+      padding: 3vmin;
+      border: 1px solid #000000;
+    }
+   </style>
 </head>
 
 <body>
+  <div id="container">
     <h1>漢 Welcome to Kanji game 字</h1>
 
     This is an educational game to practice kanji-based Japanese words.<br>
@@ -31,12 +41,13 @@
     To start the game, select your JLPT level:
     <br>
     <ul>
-      <li><a href="game5.html"><b>N5</b> (79 kanjis)</a></li>
-      <li><a href="game4.html"><b>N4</b> (245 kanjis)</a></li>
-      <li><a href="game3.html"><b>N3</b> (612 kanjis)</a></li>
-      <li><a href="game2.html"><b>N2</b> (979 kanjis)</a></li>
-      <li><a href="game1.html"><b>N1</b> (1964 kanjis)</a></li>
+      <li><a href="game5.html"><b>Play with N5</b> (79 kanjis)</a></li>
+      <li><a href="game4.html"><b>Play with N4</b> (245 kanjis)</a></li>
+      <li><a href="game3.html"><b>Play with N3</b> (612 kanjis)</a></li>
+      <li><a href="game2.html"><b>Play with N2</b> (979 kanjis)</a></li>
+      <li><a href="game1.html"><b>Play with N1</b> (1964 kanjis)</a></li>
     </ul>
+  </div>
 </body>
 
 </html>
