Open github.com link in new tab

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <h1>漢 Welcome to Kanji game 字</h1>
 
     This is an educational game to practice kanji-based Japanese words.<br>
-    Click <a href="https://github.com/didmar/kanjigame-elm">here</a> for more information and source code.
+    Click <a target="_blank" href="https://github.com/didmar/kanjigame-elm">here</a> for more information and source code.
 
     <h2>How to play</h2>
 
